conf/firewall.conf
-A RH-Firewall-1-INPUT -p tcp --dport 6661 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp --dport 6661 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp --dport 6666 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp --dport 6666 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp --dport 9232 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp --dport 9232 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp --dport 13666 -j ACCEPT
-A RH-Firewall-1-INPUT -p udp --dport 13666 -j ACCEPT
